<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">This app won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="app_name">BM15 PRO</string>
    <string name="main_game_bm15">Try NEW BM16 PRO!</string>
    <string name="hello_world">Hello world!</string>
    <string name="blank" />
    <string name="separator">-</string>
    <string name="of">of</string>
    <string name="value_example">37</string>
    <string name="team">Team</string>
    <string name="name">Name</string>
    <string name="free_agent">Free agent</string>
    <string name="match_in_home_of">@</string>
    <string name="damage">Injured</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="current_season">Season</string>
    <string name="current_matchday">Matchday</string>
    <string name="conference">Conference</string>
    <string name="conference_east">East</string>
    <string name="conference_west">West</string>
    <string name="conference_playoffs">Total</string>
    <string name="division">Division</string>
    <string name="division_e1">Div AT</string>
    <string name="division_e2">Div CE</string>
    <string name="division_e3">Div SE</string>
    <string name="division_w1">Div NO</string>
    <string name="division_w2">Div SO</string>
    <string name="division_w3">Div PA</string>
    <string name="short_position_point_guard">PG</string>
    <string name="short_position_shooting_guard">SG</string>
    <string name="short_position_small_forward">SF</string>
    <string name="short_position_power_forward">PF</string>
    <string name="short_position_center">C</string>
    <string name="position_point_guard">Point Guard</string>
    <string name="position_shooting_guard">Shooting Guard</string>
    <string name="position_small_forward">Small Forward</string>
    <string name="position_power_forward">Power Forward</string>
    <string name="position_center">Center</string>
    <string name="position_reserve">Substitute</string>
    <string name="button_create">Create</string>
    <string name="button_accept">Accept</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_remove">Remove</string>
    <string name="button_close">Close</string>
    <string name="button_guide">Guide</string>
    <string name="button_exit">Exit</string>
    <string name="button_check">Check</string>
    <string name="button_continue">Continue</string>
    <string name="button_go">Go to %1$s</string>
    <string name="button_try_other">Try other</string>
    <string name="button_filter">Filter</string>
    <string name="button_filter_by">Filter by</string>
    <string name="button_play_auto">Auto</string>
    <string name="button_play_manual">Manual</string>
    <string name="info_title">Information</string>
    <string name="info_exit">Are you sure you want to exit?</string>
    <string name="info_export">Export finished</string>
    <string name="info_saving">Saving data...</string>
    <string name="info_validating">Validating team %1$s...</string>
    <string name="info_new_season">Creating new season...</string>
    <string name="info_playoffs_end">Ending league...</string>
    <string name="info_renewal">Renewing players...</string>
    <string name="info_draft">Calculating draft...</string>
    <string name="info_free_agents">Starting free agency...</string>
    <string name="info_load_file_folder">Select a file from %1$s folder</string>
    <string name="notice_title">Notice</string>
    <string name="notice_save_ok">Saved.</string>
    <string name="notice_delete_ok">Deleted.</string>
    <string name="notice_trade">Trade notice</string>
    <string name="notice_trade_ok">%1$s has accepted the offer of %2$s.</string>
    <string name="notice_trade_ko">%1$s has rejected the offer of %2$s.</string>
    <string name="notice_renewal_ok">%1$s has accepted your offer.</string>
    <string name="notice_renewal_ko">%1$s has rejected your offer.</string>
    <string name="notice_challenge">You have not yet won the competition with any team.</string>
    <string name="notice_trade_between_teams">The trade is done correctly.</string>
    <string name="warning_title">Warning</string>
    <string name="warning_matchday_play">Are you sure you want to play until matchday %1$s? \n\nPlay with or without automatic lineup? Warning playing without automatic lineup can exhaust and injure players.</string>
    <string name="warning_game_delete">Are you sure you want to delete this game?</string>
    <string name="warning_draft_no_more_picks">No more picks in this round.</string>
    <string name="warning_draft_select">Are you sure you want to select %1$s?</string>
    <string name="warning_trade_block">Trade %1$s \nfor %2$s?</string>
    <string name="warning_max_players_in_team">Your team already has 20 players, you can not sign more.</string>
    <string name="warning_no_more_offers">Currently %1$s not accept more offers.</string>
    <string name="warning_players_to_renew1">Matchday of negotiations, please go to Renewals in Menu and check it.</string>
    <string name="warning_players_to_renew2">You have players with expired contracts, if you want to renew them, go to Renewals in Menu. Otherwise these players will go to Free Agency.</string>
    <string name="warning_draft_round">Are you sure you don\'t want to pick a player in 2nd round of the draft?</string>
    <string name="warning_market_closed">The Market is closed, you can\'t trade or sign players until the end of the season.</string>
    <string name="warning_free_agency">Are you sure you want to end free agency\'s day?</string>
    <string name="error_title">Error</string>
    <string name="error_game_new">Name of the game is mandatory.</string>
    <string name="error_select_position">Please enter a position to search.</string>
    <string name="error_lineup_incorrect">Your lineup is incorrect, check it up, please.</string>
    <string name="error_draft_round">You must select a player of draft list.</string>
    <string name="error_no_files_found">No csv files found in %1$s folder.</string>
    <string name="error_create_roster">Error creating rosters by file.</string>
    <string name="error_free_agency">Your team must have a minimum of 13 players.</string>
    <string name="error_trade_other_team">The team is not interested in a trade.</string>
    <string name="error_trade_user_team">No one is interested in this trade.</string>
    <string name="main_blank_games">BT Games Studio (Keep it Simple)</string>
    <string name="main_game_new_default">New game</string>
    <string name="main_game_new_custom">Custom game</string>
    <string name="main_game_name">Insert name</string>
    <string name="main_game_url">Insert Url</string>
    <string name="main_creating_title">Creating new game!</string>
    <string name="main_deleting_title">Deleting game!</string>
    <string name="main_waiting_text">The process may last some seconds…</string>
    <string name="main_export_player_csv">Create default Rosters.csv file</string>
    <string name="main_export_team">Export Team table to CSV</string>
    <string name="main_export_match">Export Match table to CSV</string>
    <string name="main_export_match_result">Export MatchResult table to CSV</string>
    <string name="main_export_player">Export Player table to CSV</string>
    <string name="main_export_playoffs">Export Playoffs table to CSV</string>
    <string name="main_info">Click game to select, long click to delete!</string>
    <string name="main_default_local">Local roster</string>
    <string name="main_default_online">Online roster</string>
    <string name="main_default_rosters_url">https://dl.dropboxusercontent.com/u/1087738/rosters.csv</string>
    <string name="main_custom_select_file">Select a valid file</string>
    <string name="select_team_title">Select a team</string>
    <string name="select_team_confirm_team">Are you sure you want %1$s?</string>
    <string name="team_tactic_game_type">Team Game Type</string>
    <string name="team_tactic_game_type_offensive">Aggresive</string>
    <string name="team_tactic_game_type_neutral">Neutral</string>
    <string name="team_tactic_game_type_defensive">Conservative</string>
    <string name="team_tactic_bench_importance">Bench Importance</string>
    <string name="team_tactic_shot_int_percent">Interior Shot Attempts</string>
    <string name="team_tactic_shot_triple_percent">3 Points Attempts</string>
    <string name="team_tactic_common_high">High</string>
    <string name="team_tactic_common_normal">Normal</string>
    <string name="team_tactic_common_low">Low</string>
    <string name="team_tactic_stars_of_your_team">Team Stars</string>
    <string name="team_tactic_star_one">+3 importance</string>
    <string name="team_tactic_star_two">+2 importance</string>
    <string name="team_tactic_star_three">+1 importance</string>
    <string name="team_tactic_stars_info">Choose your stars!</string>
</resources>