<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" style="@style/layoutDefault">
    <TextView
        android:textColor="@color/holo_blue_dark"
        android:id="@+id/mainTextViewLogo"
        android:layout_marginTop="@dimen/padding_double"
        android:text="@string/main_blank_games"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/textViewDefault"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/mainLinearLayoutGameNew"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/padding_default"
        android:layout_marginTop="@dimen/padding_double"
        android:layout_marginRight="@dimen/padding_default"
        android:layout_below="@+id/mainTextViewLogo"
        android:layout_centerHorizontal="true"
        style="@style/spinnerLayoutDefault">
        <Button
            android:id="@+id/mainButtonGameNewDefault"
            android:layout_margin="@dimen/padding_default"
            android:text="@string/main_game_new_default"
            android:layout_weight="1"
            android:onClick="onClickGameNewDefault"
            style="@style/buttonDefault"/>
        <Button
            android:id="@+id/mainButtonGameNewCustom"
            android:layout_margin="@dimen/padding_default"
            android:text="@string/main_game_new_custom"
            android:layout_weight="1"
            android:onClick="onClickGameNewCustom"
            style="@style/buttonDefault"/>
    </LinearLayout>
    <TextView
        android:textSize="@dimen/text_small"
        android:textColor="@color/base_gray_light"
        android:id="@+id/mainTextViewInfo"
        android:paddingTop="@dimen/padding_double"
        android:paddingBottom="@dimen/padding_none"
        android:text="@string/main_info"
        android:layout_below="@+id/mainLinearLayoutGameNew"
        android:layout_centerHorizontal="true"
        style="@style/textViewDefault"/>
    <ListView
        android:id="@+id/mainListViewGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_double"
        android:layout_marginTop="@dimen/padding_none"
        android:layout_marginRight="@dimen/padding_double"
        android:layout_above="@+id/mainButtonBM15"
        android:layout_below="@+id/mainTextViewInfo"
        android:layout_centerHorizontal="true"/>
    <Button
        android:textSize="@dimen/text_medium"
        android:id="@+id/mainButtonBM15"
        android:background="@color/holo_red_dark"
        android:layout_height="35dp"
        android:layout_margin="@dimen/padding_default"
        android:text="@string/main_game_bm15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClickBM15PRO"
        style="@style/buttonDefault"/>
    <RelativeLayout
        android:id="@+id/mainRelativeLayoutProgressBar"
        android:visibility="gone"
        android:layout_below="@+id/mainLinearLayoutGameNew"
        android:layout_centerHorizontal="true"
        style="@style/spinnerLayoutDefault">
        <ProgressBar
            android:id="@+id/mainProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="?android:attr/progressBarStyleLarge"/>
        <TextView
            android:textSize="@dimen/text_large"
            android:textColor="@color/holo_red_dark"
            android:id="@+id/mainTextViewProcessBarTitle"
            android:text="@string/main_creating_title"
            android:layout_below="@+id/mainProgressBar"
            android:layout_centerHorizontal="true"
            style="@style/textViewDefault"/>
        <TextView
            android:textSize="@dimen/text_small"
            android:textColor="@color/holo_red_dark"
            android:id="@+id/mainTextViewProcessBarText"
            android:text="@string/main_waiting_text"
            android:layout_below="@+id/mainTextViewProcessBarTitle"
            android:layout_centerHorizontal="true"
            style="@style/textViewDefault"/>
    </RelativeLayout>
</RelativeLayout>
