<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto" style="@style/layoutDefault">
    <include
        android:id="@+id/layout_team"
        layout="@layout/layout_team"/>
    <ScrollView
        android:layout_below="@+id/layout_team"
        android:layout_alignParentBottom="true"
        style="@style/layoutDefault">
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/teamTacticTextViewGameType"
                android:layout_marginLeft="@dimen/padding_double"
                android:layout_marginTop="@dimen/padding_default"
                android:text="@string/team_tactic_game_type"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewGameTypeDefensive"
                android:layout_marginLeft="@dimen/padding_double"
                android:text="@string/team_tactic_game_type_defensive"
                android:layout_below="@+id/teamTacticTextViewGameType"
                android:layout_alignParentLeft="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewGameTypeNeutral"
                android:text="@string/team_tactic_game_type_neutral"
                android:layout_below="@+id/teamTacticTextViewGameType"
                android:layout_centerHorizontal="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewGameTypeOffensive"
                android:layout_marginRight="@dimen/padding_double"
                android:text="@string/team_tactic_game_type_offensive"
                android:layout_below="@+id/teamTacticTextViewGameType"
                android:layout_alignParentRight="true"
                style="@style/textViewDefault"/>
            <SeekBar
                android:id="@+id/teamTacticSeekBarGameType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_double"
                android:layout_marginRight="@dimen/padding_double"
                android:layout_below="@+id/teamTacticTextViewGameTypeOffensive"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"/>
            <TextView
                android:id="@+id/teamTacticTextViewBenchImportance"
                android:layout_marginLeft="@dimen/padding_double"
                android:text="@string/team_tactic_bench_importance"
                android:layout_below="@+id/teamTacticSeekBarGameType"
                android:layout_alignParentLeft="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewBenchImportanceLow"
                android:layout_marginLeft="@dimen/padding_double"
                android:text="@string/team_tactic_common_low"
                android:layout_below="@+id/teamTacticTextViewBenchImportance"
                android:layout_alignParentLeft="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewBenchImportanceNormal"
                android:text="@string/team_tactic_common_normal"
                android:layout_below="@+id/teamTacticTextViewBenchImportance"
                android:layout_centerHorizontal="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewBenchImportanceHigh"
                android:layout_marginRight="@dimen/padding_double"
                android:text="@string/team_tactic_common_high"
                android:layout_below="@+id/teamTacticTextViewBenchImportance"
                android:layout_alignParentRight="true"
                style="@style/textViewDefault"/>
            <SeekBar
                android:id="@+id/teamTacticSeekBarBenchImportance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_double"
                android:layout_marginRight="@dimen/padding_double"
                android:layout_below="@+id/teamTacticTextViewBenchImportanceHigh"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"/>
            <TextView
                android:id="@+id/teamTacticTextViewShotIntPercent"
                android:layout_marginLeft="@dimen/padding_double"
                android:layout_marginTop="@dimen/padding_default"
                android:text="@string/team_tactic_shot_int_percent"
                android:layout_below="@+id/teamTacticSeekBarBenchImportance"
                android:layout_alignParentLeft="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewShotIntPercentLow"
                android:layout_marginLeft="@dimen/padding_double"
                android:text="@string/team_tactic_common_low"
                android:layout_below="@+id/teamTacticTextViewShotIntPercent"
                android:layout_alignParentLeft="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewShotIntPercentNormal"
                android:text="@string/team_tactic_common_normal"
                android:layout_below="@+id/teamTacticTextViewShotIntPercent"
                android:layout_centerHorizontal="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewShotIntPercentHigh"
                android:layout_marginRight="@dimen/padding_double"
                android:text="@string/team_tactic_common_high"
                android:layout_below="@+id/teamTacticTextViewShotIntPercent"
                android:layout_alignParentRight="true"
                style="@style/textViewDefault"/>
            <SeekBar
                android:id="@+id/teamTacticSeekBarShotIntPercent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_double"
                android:layout_marginRight="@dimen/padding_double"
                android:layout_below="@+id/teamTacticTextViewShotIntPercentHigh"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"/>
            <TextView
                android:id="@+id/teamTacticTextViewShotTriplePercent"
                android:layout_marginLeft="@dimen/padding_double"
                android:layout_marginTop="@dimen/padding_default"
                android:text="@string/team_tactic_shot_triple_percent"
                android:layout_below="@+id/teamTacticSeekBarShotIntPercent"
                android:layout_alignParentLeft="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewShotTriplePercentLow"
                android:layout_marginLeft="@dimen/padding_double"
                android:text="@string/team_tactic_common_low"
                android:layout_below="@+id/teamTacticTextViewShotTriplePercent"
                android:layout_alignParentLeft="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewShotTriplePercentNormal"
                android:text="@string/team_tactic_common_normal"
                android:layout_below="@+id/teamTacticTextViewShotTriplePercent"
                android:layout_centerHorizontal="true"
                style="@style/textViewDefault"/>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:id="@+id/teamTacticTextViewShotTriplePercentHigh"
                android:layout_marginRight="@dimen/padding_double"
                android:text="@string/team_tactic_common_high"
                android:layout_below="@+id/teamTacticTextViewShotTriplePercent"
                android:layout_alignParentRight="true"
                style="@style/textViewDefault"/>
            <SeekBar
                android:id="@+id/teamTacticSeekBarShotTriplePercent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_double"
                android:layout_marginRight="@dimen/padding_double"
                android:layout_below="@+id/teamTacticTextViewShotTriplePercentHigh"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"/>
            <TextView
                android:id="@+id/teamTacticTextViewStarsOfTeam"
                android:layout_marginLeft="@dimen/padding_double"
                android:layout_marginTop="@dimen/padding_default"
                android:text="@string/team_tactic_stars_of_your_team"
                android:layout_below="@+id/teamTacticSeekBarShotTriplePercent"
                android:layout_alignParentLeft="true"
                style="@style/textViewDefault"/>
            <LinearLayout
                android:id="@+id/teamTacticLinearLayoutStars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teamTacticTextViewStarsOfTeam">
                <Button
                    android:textSize="@dimen/text_small"
                    android:id="@+id/teamTacticButtonStarOne"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height_small"
                    android:layout_marginLeft="@dimen/padding_double"
                    android:layout_marginTop="@dimen/padding_default"
                    android:layout_marginRight="@dimen/padding_default"
                    android:text="@string/team_tactic_star_one"
                    android:layout_weight="1"
                    android:onClick="onClickTacticStarPlayers"
                    style="@style/buttonDefault"/>
                <Button
                    android:textSize="@dimen/text_small"
                    android:id="@+id/teamTacticButtonStarTwo"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height_small"
                    android:layout_marginLeft="@dimen/padding_default"
                    android:layout_marginTop="@dimen/padding_default"
                    android:layout_marginRight="@dimen/padding_default"
                    android:text="@string/team_tactic_star_two"
                    android:layout_weight="1"
                    android:onClick="onClickTacticStarPlayers"
                    style="@style/buttonDefault"/>
                <Button
                    android:textSize="@dimen/text_small"
                    android:id="@+id/teamTacticButtonStarThree"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height_small"
                    android:layout_marginLeft="@dimen/padding_default"
                    android:layout_marginTop="@dimen/padding_default"
                    android:layout_marginRight="@dimen/padding_double"
                    android:text="@string/team_tactic_star_three"
                    android:layout_weight="1"
                    android:onClick="onClickTacticStarPlayers"
                    style="@style/buttonDefault"/>
            </LinearLayout>
            <TextView
                android:textSize="@dimen/text_small"
                android:textColor="@color/base_gray_dark"
                android:gravity="center"
                android:id="@+id/teamTacticTextViewStarsInfo"
                android:text="@string/team_tactic_stars_info"
                android:layout_below="@+id/teamTacticLinearLayoutStars"
                android:layout_centerHorizontal="true"
                style="@style/textViewDefault"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
